added log to create quotation bean

--- a/src/q/app/qetaa/helpers/lexicon.properties
+++ b/src/q/app/qetaa/helpers/lexicon.properties
@@ -64,7 +64,8 @@ selectPayment=اختر طريقة الدفع
 visa=فيزا
 masterCard=ماستر كارد
 mada=مدى
-cardNumber=رقم البطاقو
+amex=امريكان اكسبرس
+cardNumber=رقم البطاقة
 cardName=اسم حامل البطاقة
 cartYear=سنة الإنتهاء
 cartMonth=شهر الإنتهاء
